@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/kmerge.sh,v 1.23 2005/02/28 23:21:09 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/kmerge.sh,v 1.24 2005/03/07 19:52:00 wolf31o2 Exp $
 
 die() {
 	echo "$1"
@@ -102,7 +102,7 @@ ln -s /usr/share/zoneinfo/UTC /etc/localtime
 # Don't use pkgcache here, as the kernel source may get emerge with different USE variables
 # (and thus different patches enabled/disabled.) Also, there's no real benefit in using the
 # pkgcache for kernel source ebuilds.
-emerge "${clst_ksource}" || exit 1
+emerge -n "${clst_ksource}" || exit 1
 [ ! -e /usr/src/linux ] && die "Can't find required directory /usr/src/linux"
 	
 #if catalyst has set NULL_VALUE, extraversion wasn't specified so we skip this part
