@@ -1,12 +1,12 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/pre-kmerge.sh,v 1.9 2005/03/06 14:35:37 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/pre-kmerge.sh,v 1.10 2005/03/07 19:52:00 wolf31o2 Exp $
 
 /usr/sbin/env-update
 source /etc/profile
 
-if [ ! -e "/usr/bin/genkernel" ]
+if [ ! $(portageq has_version / $(portageq best_version / sys-kernel/genkernel)) ]
 then
 	emerge -k -b genkernel
 fi
